fix: temporary fix for broken ui when long file list for a service in PredictHome

--- a/src/styles/widgets/PredictServiceList/styles.scss
+++ b/src/styles/widgets/PredictServiceList/styles.scss
@@ -6,7 +6,7 @@
   .card {
     box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.6);
     border: 0;
-    height: 430px;
+    height: 450px;
 
     .card-title {
       color: $neutral_blue_1;
